--- a/HttpSensorListener/package.json
+++ b/HttpSensorListener/package.json
@@ -1,16 +1,23 @@
-﻿{
+{
   "name": "HttpSensorListener",
-  "version": "0.0.0",
-  "description": "HttpSensorListener",
+  "version": "0.1.0",
+  "description": "HTTP Sensor Data Listener",
   "main": "app.js",
   "author": {
-    "name": "형헌",
-    "email": ""
+    "name": "Web of Think",
+    "email": "webofthink@tistory.com"
+  },
+  "apidoc": {
+    "title": "Sensor Chart REST API",
+    "url": "http://api.sensorchart.com/"
   },
   "dependencies": {
-    "express": "3.4.4",
+    "body-parser": "1.12.3",
+    "cookie-parser": "1.3.4",
     "jade": "*",
-    "stylus": "*",
-    "mysql" :  "2.8.0"
+    "express": "4.9.4",
+    "mysql": "2.8.0",
+    "morgan": "1.5.2",
+    "serve-favicon": "2.1.4"
   }
 }
